--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Sleep -- Poetry'
+- GITenberg
 title: 'Sleep-Book
 
   Some of the Poetry of Slumber'
